--- a/src/pages/books.astro
+++ b/src/pages/books.astro
@@ -5,4 +5,5 @@ import Card from "../components/Card.astro";
 <MainLayout title="Books">
 	<Card header="Titel" text="forfatter" newRelease={true} />
 	<Card header="Titel" text="forfatter"/>
+	<Card header="Titel" text="forfatter" newRelease={true} />
 </MainLayout>
