--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@
 
 <nav>
     <a href="/">Home</a>
-    <a href="/books">Books</a>
+    <a href="/listview">Books</a>
     <a href="/#">Events</a>
 </nav>
 
